--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E02265F0-5F42-4A03-9F8C-4EE8CBB6833A}</ProjectGuid>
+    <ProjectGuid>{4907649E-2689-4DE2-B257-053DB8C369DF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestFunctions</RootNamespace>
-    <AssemblyName>TestFunctions</AssemblyName>
+    <RootNamespace>Shared</RootNamespace>
+    <AssemblyName>Shared</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,12 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AckleyFunction.cs" />
-    <Compile Include="FunctionBase.cs" />
+    <Compile Include="ExtensionMethods\LinqExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RosenbrockFunction.cs" />
-    <Compile Include="SchwefelFunction.cs" />
-    <Compile Include="SphereFunction.cs" />
+    <Compile Include="TestFunctions\AckleyFunction.cs" />
+    <Compile Include="TestFunctions\FunctionBase.cs" />
+    <Compile Include="TestFunctions\RosenbrockFunction.cs" />
+    <Compile Include="TestFunctions\SchwefelFunction.cs" />
+    <Compile Include="TestFunctions\SphereFunction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
