--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExtensionMethods\LinqExtensions.cs" />
+    <Compile Include="ExtensionMethods\RandomExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestFunctions\AckleyFunction.cs" />
     <Compile Include="TestFunctions\FunctionBase.cs" />
