--- a/Lesson03/Lesson03.csproj
+++ b/Lesson03/Lesson03.csproj
@@ -49,12 +49,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SimulatedAnnealingAlgorithm.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="HillClimbingAlgorithm.cs" />
+    <Compile Include="IAlgorithm.cs" />
     <Compile Include="Individual.cs" />
     <Compile Include="Population.cs" />
     <Compile Include="Program.cs" />
