--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestFunctions\AckleyFunction.cs" />
     <Compile Include="TestFunctions\BoothFunction.cs" />
+    <Compile Include="TestFunctions\DeJongFunction.cs" />
     <Compile Include="TestFunctions\FunctionBase.cs" />
     <Compile Include="TestFunctions\RosenbrockFunction.cs" />
     <Compile Include="TestFunctions\SchwefelFunction.cs" />
