--- a/Lesson05/Lesson05.csproj
+++ b/Lesson05/Lesson05.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -55,15 +55,18 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="HillClimbingAlgorithm.cs" />
-    <Compile Include="IAlgorithm.cs" />
+    <Compile Include="OptimizationAlgorithms\HillClimbingAlgorithm.cs" />
+    <Compile Include="OptimizationAlgorithms\IAlgorithm.cs" />
     <Compile Include="Individual.cs" />
+    <Compile Include="ParticleSwarmIndividual.cs" />
+    <Compile Include="OptimizationAlgorithms\ParticleSwarmAlgorithm.cs" />
     <Compile Include="Population.cs" />
+    <Compile Include="PopulationBuilder.cs" />
     <Compile Include="Vector.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimulatedAnnealingAlgorithm.cs" />
-    <Compile Include="SomaAlgorithm.cs" />
+    <Compile Include="OptimizationAlgorithms\SimulatedAnnealingAlgorithm.cs" />
+    <Compile Include="OptimizationAlgorithms\SomaAlgorithm.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
