--- a/Lesson06/Lesson06.csproj
+++ b/Lesson06/Lesson06.csproj
@@ -56,7 +56,8 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Individual.cs" />
-    <Compile Include="OptimizationAlgorithms\DifferentialEvolution.cs" />
+    <Compile Include="OptimizationAlgorithms\DifferentialEvolutionRand.cs" />
+    <Compile Include="OptimizationAlgorithms\DifferentialEvolutionCurrentToBest.cs" />
     <Compile Include="OptimizationAlgorithms\HillClimbingAlgorithm.cs" />
     <Compile Include="OptimizationAlgorithms\IAlgorithm.cs" />
     <Compile Include="OptimizationAlgorithms\ParticleSwarmAlgorithm.cs" />
