Lesson 7: Improve GUI, some refactoring

--- a/Lesson07/Lesson07.csproj
+++ b/Lesson07/Lesson07.csproj
@@ -85,5 +85,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj">
+      <Project>{4907649E-2689-4DE2-B257-053DB8C369DF}</Project>
+      <Name>Shared</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
