--- a/Lesson08/Lesson08.csproj
+++ b/Lesson08/Lesson08.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AntColonyOptimizationAlgorithm.cs" />
     <Compile Include="CitiesSequence.cs" />
     <Compile Include="City.cs" />
     <Compile Include="Form1.cs">
@@ -56,6 +57,7 @@
     </Compile>
     <Compile Include="GeneticAlgorithm.cs" />
     <Compile Include="IAlgorithm.cs" />
+    <Compile Include="Matrix.cs" />
     <Compile Include="Population.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
